StackOverflow 2019-es kérdőíve hozzáadva.

--- a/dolgozat/fejezetek/2_rust.tex
+++ b/dolgozat/fejezetek/2_rust.tex
@@ -39,7 +39,7 @@ Ezeket a 0.11-es verzióban lecserélték a \texttt{Box} és a \texttt{Gc} (majd
 2014. januárjában, Andrew Binstock, a Dr Dobb's főszerkesztője, megemlítette a nyelvet, és megjegyezte, hogy van esélye versenyképesnek lenni a C++ mellett.
 Binstock szerint bár a Rust-ot sokan gondolták "kitűnően elegáns nyelvnek," a nyelv használata lelassult, mert gyakran változott verziók között.\cite{dr_dobb}
 
-A Stack Overflow weboldal éves kérdőíve szerint a Rust 2015-ben a harmadik legkedveltebb nyelv volt, majd a következő három évben az első helyet foglalta el.\cite{so_2015, so_2016, so_2017, so_2018}
+A Stack Overflow weboldal éves kérdőíve szerint a Rust 2015-ben a harmadik legkedveltebb nyelv volt, majd a következő négy évben az első helyet foglalta el.\cite{so_2015, so_2016, so_2017, so_2018, so_2019}
 
 \Section{Összehasonlítás a C++ nyelvvel}
 
@@ -71,7 +71,7 @@ a Rust könyv meg is jegyzi, hogy az okos mutatók ötlete a C++-ból ered.\cite
 Viszont, az, hogy hogy kezelik a nyers mutatókat, eltér. C++-ban nincs különösebb megoldás a nyers mutatók észrevételére,
 kivéve a manuális kód-ellenőrzést.
 A Rust ezzel ellentétben csak az \texttt{unsafe} kódblokkokban enged nyers mutatókat használni. 
-Az ilyen blokkok mindig meg vannak jelölve az \texttt{unsafe} megnevezéssel, így egy egyszerű keresés a fáljokban rámutat, hol lehetnek nyers mutatók.\cite{compare:rust:raw_pointers}
+Az ilyen blokkok mindig meg vannak jelölve az \texttt{unsafe} megnevezéssel, így egy egyszerű keresés a fájlokban rámutat, hol lehetnek nyers mutatók.\cite{compare:rust:raw_pointers}
 
 \vskip\baselineskip
 
