--- a/dolgozat/jegyzek.bib
+++ b/dolgozat/jegyzek.bib
@@ -262,6 +262,14 @@ year = "{2018}",
 note = "{Online, elérve: 2019}"
 }
 
+@Misc{so_2019,
+author = "{Stack Overflow csapata}",
+title = "{Stack Overflow Developer Survey 2019}",
+howpublished = "{\url{https://insights.stackoverflow.com/survey/2019#most-loved-dreaded-and-wanted}}",
+year = "{2019}",
+note = "{Online, elérve: 2019}"
+}
+
 @Misc{compare:cpp:zerocost,
 author = "Bjarne Stroustrup",
 title = "{Foundations of C++}",
