--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -9,11 +9,14 @@
 \begin{document}
 \include{cimlap/cimlap}
 
-\pagestyle{myheadings}
-
+\pagestyle{empty}
 \include{feladatkiiras/feladatkiiras}
 
+\cleardoublepage
+\pagenumbering{gobble}
 \tableofcontents
+\cleardoublepage
+\pagenumbering{arabic}
 
 \newpage
 
