--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -29,7 +29,13 @@
 \include{fejezetek/1_bevezetes}
 \include{fejezetek/2_rust}
 \include{fejezetek/3_ide}
-\include{fejezetek/4_implementacio}
+
+\include{fejezetek/4_0_implementacio}
+\include{fejezetek/4_1_cargo_toml}
+\include{fejezetek/4_2_app_sourceview}
+\include{fejezetek/4_3_mentes}
+\include{fejezetek/4_4_osszekapcsolas}
+
 \include{fejezetek/5_teszt}
 \include{fejezetek/6_osszegzes}
 
