--- a/dolgozat/hasznalat/hasznalat.tex
+++ b/dolgozat/hasznalat/hasznalat.tex
@@ -10,6 +10,20 @@
 
 \noindent A szakdolgozatomhoz mellékelt adathordozó eszközön található adatok struktúrája:
 
-$$
-\ldots
-$$
+\begin{itemize}
+    \item \texttt{dolgozat/}
+    \begin{itemize}
+        \item \texttt{forras/}: A szakdolgozat \LaTeX formátumú forrása, fejezetekre bontva.
+        \item \texttt{dolgozat.pdf}: A szakdolgozat megformázott változata.
+        \item \texttt{kiiras.rtf}: A szakdolgozathoz járó feladatkiírás.
+        \item \texttt{osszefoglalo.tex}: A szakdolgozatból kiemelt \LaTeX formátumú összefoglaló magyar része.
+        \item \texttt{osszefoglalo.pdf}: A szakdolgozatból kiemelt összefoglaló magyar része, megformázott változatban.
+        \item \texttt{summary.tex}: A szakdolgozatból kiemelt \LaTeX formátumú összefoglaló angol része.
+        \item \texttt{summary.pdf}: A szakdolgozatból kiemelt összefoglaló angol része, megformázott változatban.
+    \end{itemize}
+    \item \texttt{rozsda\_ide/}: A program, ami a szakdolgozat témájaként szerepelt.
+    \begin{itemize}
+        \item \texttt{rozsda\_ide}: A program futtatható változata (Linuxon).
+        \item \texttt{src/}: A program forráskódja.
+    \end{itemize}
+\end{itemize}
