--- a/dolgozat/dolgozat.tex
+++ b/dolgozat/dolgozat.tex
@@ -10,7 +10,7 @@
 \include{cimlap/cimlap}
 
 \pagestyle{empty}
-\include{feladatkiiras/feladatkiiras}
+%\include{feladatkiiras/feladatkiiras} % TODO
 
 \cleardoublepage
 \pagenumbering{gobble}
@@ -23,8 +23,6 @@
 \pagestyle{fancy}
 
 \lstset{language=Rust, style=boxed}
-
-%\include{fejezetek/bevezetes}
 
 \include{fejezetek/1_bevezetes}
 \include{fejezetek/2_rust}
